# arpeggio-rs

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/backoffice/: backoffice_context.rs  mod.rs
src/backoffice/commands/adapters/controllers/: create_todo_controller.rs  mod.rs  remove_todo_controller.rs  update_todo_controller.rs
src/backoffice/commands/application/: mod.rs
src/backoffice/commands/domain/: mod.rs
src/backoffice/commands/infrastructure/: mod.rs
src/backoffice/plan/: mod.rs  plan_aggregate.rs
src/backoffice/plan/application/: mod.rs
src/backoffice/plan/domain/: mod.rs
src/backoffice/queries/application/: mod.rs
src/backoffice/queries/infrastructure/: mod.rs
src/backoffice/todo/application/: create_todo_use_case.rs  delete_todo_use_case.rs  find_todos_use_case.rs  get_todo_use_case.rs  mod.rs  send_notification_on_todo_created_subscriber.rs  update_todo_use_case.rs
src/backoffice/todo/domain/: mod.rs
src/core/adapters/: controller.rs  mod.rs  view.rs
src/core/application/: mod.rs  use_case_input_port.rs  use_case_output_port.rs
src/core/domain/: mod.rs
src/core/domain/entities/: aggregate_root.rs  date_value_object.rs  entity.rs  identity_object.rs  mod.rs  string_value_object.rs  value_object.rs
src/core/domain/events/: domain_event.rs  domain_event_bus.rs  domain_event_subscriber.rs
src/core/domain/models/: aggregate_root.rs  date_value_object.rs  entity.rs  identity_object.rs  mod.rs  value_object.rs
src/core/domain/repositories/: criteria.rs  mod.rs
src/core/domain/specifications/: and_specification.rs  mod.rs  not_specification.rs  or_specification.rs  specification.rs
src/core/infrastructure/: in_memory_domain_event_bus.rs  in_memory_event_bus.rs  mod.rs
(+147 files in other folders)
