[package]
name = "arpeggio-rs"
version = "1.0.0"
edition = "2021"
authors = ["Isaac Herrera <isaacdecoded@gmail.com>"]
description = "Coding template for DDD and Clean Architecture based projects"
repository = "https://github.com/isaacdecoded/arpeggio-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
chrono = "0.4"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.7.0", features = ["v4"] }
