[package]
name = "arpeggio-rs"
version = "1.0.0"
edition = "2021"
authors = ["Isaac Herrera <isaacdecoded@gmail.com>"]
description = "Coding template for DDD and Clean Architecture based projects"
repository = "https://github.com/isaacdecoded/arpeggio-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.83"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
serde = "1.0.197"
serde_json = "1.0.114"
uuid = { version = "1.8.0", features = ["v4"] }
thiserror = "1.0.58"
chrono = "0.4.38"
