[package]
name = "arpeggio-rs"
version = "1.0.0"
edition = "2021"
authors = ["Isaac Herrera <isaacdecoded@gmail.com>"]
description = "Coding template for DDD and Clean Architecture based projects"
repository = "https://github.com/isaacdecoded/arpeggio-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.78"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
